# tmux-sessionizer

./: Cargo.toml  README.md  flake.nix  justfile  package.nix
benches/: benchmark.rs
src/: binary.rs  config.rs  error.rs  lib.rs  main.rs  tmux.rs
