[package]
name = "tmux-sessionizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yml = "0.0.12"
shellexpand = "3.1.0"
skim = "0.16.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
