[package]
name = "tmux-sessionizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_yml = "0.0.12"
shellexpand = "3.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]}

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "benchmark"
harness = false
