[package]
name = "tmux-sessionizer"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.13"
shellexpand = "3.1.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "benchmark"
harness = false
